--- a/code/ErreurRetrofit/app/build.gradle
+++ b/code/ErreurRetrofit/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'org.deguet.retrofit_erreur'
 }
 
 dependencies {
