--- a/code/NavDrawer/app/build.gradle
+++ b/code/NavDrawer/app/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
+    compileSdk 33
     buildFeatures {
         viewBinding true
     }
     defaultConfig {
         applicationId "org.sabourin.navigationdrawerdemo"
         minSdkVersion 16
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
