--- a/code/NavDrawer/app/build.gradle
+++ b/code/NavDrawer/app/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 android {
-    compileSdkVersion 34
+    compileSdk 34
     buildFeatures {
         viewBinding true
     }
     defaultConfig {
         applicationId "org.sabourin.navigationdrawerdemo"
         minSdkVersion 16
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
