--- a/code/Layouts/app/build.gradle
+++ b/code/Layouts/app/build.gradle
@@ -1,17 +1,18 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    compileSdkVersion 32
+    compileSdk 35
     buildFeatures {
         viewBinding true
     }
 
     defaultConfig {
         applicationId "org.deguet.layouts"
-        minSdkVersion 16
-        targetSdkVersion 32
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -29,8 +30,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     namespace 'org.deguet.layouts'
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
     implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.core:core-ktx:1.15.0'
 }
