--- a/code/ErreurRetrofit/app/build.gradle
+++ b/code/ErreurRetrofit/app/build.gradle
@@ -1,11 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdkVersion 31
+    // add view binding
+    viewBinding {
+        enabled = true
+    }
+
+    compileSdk 35
     defaultConfig {
         applicationId "org.deguet.retroerreur"
-        minSdkVersion 16
-        targetSdkVersion 31
+        minSdkVersion 22
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -17,19 +23,16 @@ android {
         }
     }
     namespace 'org.deguet.retrofit_erreur'
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
-
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
     implementation group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.9.0'
     implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.9.3'
-
-
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.core:core-ktx:1.15.0'
 }
