Progress converti en kotlin

--- a/code/Progress/app/build.gradle
+++ b/code/Progress/app/build.gradle
@@ -1,15 +1,22 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdkVersion 32
+    namespace 'org.deguet.progress'
+    compileSdk 35
     defaultConfig {
         applicationId "org.deguet.progress"
-        minSdkVersion 16
-        targetSdkVersion 32
+        minSdkVersion 24
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
+
+    viewBinding {
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -17,13 +24,15 @@ android {
         }
     }
     namespace 'org.deguet.progress'
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
-    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
     implementation group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.9.0'
-    implementation group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '4.9.3'
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.core:core-ktx:1.15.0'
 }
