--- a/code/SwipeRefresh/build.gradle
+++ b/code/SwipeRefresh/build.gradle
@@ -2,13 +2,14 @@
 buildscript {
     ext {
         kotlin_version = '2.1.20'
+        agp_version = '8.8.2'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.9.0'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
