--- a/code/Progress/local.properties
+++ b/code/Progress/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 17 21:38:02 EST 2024
-sdk.dir=/Users/jorisdeguet/Library/Android/sdk
+#Tue Mar 25 14:43:12 EDT 2025
+sdk.dir=/Users/mathieudupont/Library/Android/sdk
