--- a/code/ComposeProportions/app/src/main/AndroidManifest.xml
+++ b/code/ComposeProportions/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Proportions"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Proportions">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Proportions">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
