--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cem-4n6",
-  "version": "1.0.0",
+  "version": "2026.1.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -24,15 +24,15 @@
     "docusaurus-lunr-search": "^3.6.0",
     "prism-react-renderer": "^2.4.1",
     "raw-loader": "^4.0.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-player": "^3.3.3"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-player": "^3.4.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.2",
     "@docusaurus/tsconfig": "^3.9.2",
     "@docusaurus/types": "^3.9.2",
-    "typescript": "~5.9.3"
+    "typescript": "^5.9.3"
   },
   "browserslist": {
     "production": [
