--- a/code/SpringBootAccessControl/04-TestProprio/src/main/resources/application.properties
+++ b/code/SpringBootAccessControl/04-TestProprio/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 spring.h2.console.enabled=true
-
-#spring.http.converters.preferred-json-mapper=gson
-#spring.gson.lenient=true
-#spring.gson.pretty-printing=true
+spring.jackson.serialization.indent-output=true
